--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -370,11 +370,9 @@
             <div>
               <p class="overskrift -ml-6 text-rust-200 lg:-ml-14">Hyppighed</p>
               <div class="bar4">
-                <a href="abonnement4.html"
-                  ><div class="ball4">
-                    <p>4</p>
-                  </div>
-                </a>
+                <div class="ball4">
+                  <p>4</p>
+                </div>
               </div>
             </div>
           </div>
@@ -408,7 +406,7 @@
         <article
           class="flex items-baseline gap-xs-spacing-mobile lg:gap-s-spacing-desktop"
         >
-          <div>
+          <form>
             <label class="form-control">
               <input
                 class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
@@ -416,7 +414,7 @@
                 name="radio"
               />
             </label>
-          </div>
+          </form>
           <h3 class="font-font-body text-body-mobile lg:text-body-desktop">
             Ja
           </h3>
@@ -425,7 +423,7 @@
         <article
           class="flex items-baseline gap-xs-spacing-mobile lg:gap-s-spacing-desktop"
         >
-          <div>
+          <form>
             <label class="form-control">
               <input
                 class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
@@ -433,7 +431,7 @@
                 name="radio"
               />
             </label>
-          </div>
+          </form>
           <h3 class="font-font-body text-body-mobile lg:text-body-desktop">
             Nej
           </h3>
@@ -444,13 +442,12 @@
       <section
         class="flex place-content-center pt-l-spacing-mobile pb-xxl-spacing-mobile lg:pt-xl-spacing-desktop lg:pb-xxl-spacing-desktop"
       >
-        <a href="abonnement4.html"
-          ><button
-            class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
-          >
-            Næste trin
-          </button></a
+        <a
+          class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
+          href="abonnement4.html"
         >
+          Næste trin
+        </a>
       </section>
     </main>
 
