--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -392,13 +392,12 @@
       <section
         class="flex place-content-center pt-l-spacing-mobile pb-xxl-spacing-mobile lg:pt-l-spacing-desktop lg:pb-xxl-spacing-desktop"
       >
-        <a href="index.html"
-          ><button
-            class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
-          >
-            Tilføj til kurv
-          </button></a
+        <a
+          class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
+          href="kurv.html"
         >
+          Tilføj til kurv
+        </a>
       </section>
     </main>
 
