--- a/src/betal.html
+++ b/src/betal.html
@@ -385,12 +385,12 @@
             </div>
             <div class="rounded-radius-mobile border-2 border-color-headings">
               <div class="flex lg:gap-8">
-                <div class="my-auto w-1/2 pt-xs-spacing-mobile lg:w-full">
+                <figure class="my-auto w-1/2 pt-xs-spacing-mobile lg:w-full">
                   <img
                     src="img/abonnement_filler.webp"
                     alt="blomster i en spand"
                   />
-                </div>
+                </figure>
                 <div class="lg:w-[600px]">
                   <div class="pt-l-spacing-mobile lg:pt-l-spacing-desktop">
                     <p
@@ -425,11 +425,11 @@
               <div
                 class="flex place-content-center py-l-spacing-mobile font-medium lg:py-m-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   Subtotal 620 kr
-                </h4>
+                </h3>
               </div>
             </div>
             <div class="primary py-xl-spacing-mobile lg:py-xl-spacing-desktop">
@@ -456,46 +456,46 @@
             <div class="flex flex-col gap-[27px] lg:gap-[44px]">
               <a href="betal_kreditkort.html">
                 <div
-                  class="grid h-[70px] w-[330px] border-2 border-color-black lg:h-[100px] lg:w-[490px]"
+                  class="grid h-[70px] w-[330px] border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
                 >
-                  <h3
+                  <h4
                     class="m-auto font-font-body text-body-mobile lg:text-body-desktop"
                   >
                     Mobile Pay
-                  </h3>
+                  </h4>
                 </div></a
               >
               <a class="" href="betal_kreditkort.html">
                 <div
-                  class="flex h-[70px] w-[330px] place-content-center gap-10 border-2 border-color-black lg:h-[100px] lg:w-[490px]"
+                  class="flex h-[70px] w-[330px] place-content-center gap-10 border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
                 >
                   <img
                     class="my-auto h-10 w-10"
                     src="img/ikoner/kreditkort_ikon.svg"
                     alt="betalingskort ikon"
                   />
-                  <h3
+                  <h4
                     class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                   >
                     Kreditkort
-                  </h3>
+                  </h4>
                 </div></a
               >
 
               <a href="betal_kreditkort.html">
                 <div
-                  class="flex h-[70px] w-[330px] place-content-center gap-10 border-2 border-color-black lg:h-[100px] lg:w-[490px]"
+                  class="flex h-[70px] w-[330px] place-content-center gap-10 border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
                 >
                   <img
                     class="my-auto h-10 w-10"
                     src="img/ikoner/gavekort_ikon.svg"
                     alt="gavekort ikon"
                   />
-                  <h3
+                  <h4
                     class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                   >
                     Gavekort
-                  </h3>
+                  </h4>
                 </div></a
               >
             </div>
