--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -302,13 +302,11 @@
     >
       <section>
         <article>
-          <div>
-            <h1
-              class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
-            >
-              Bekræftelse
-            </h1>
-          </div>
+          <h1
+            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
+          >
+            Bekræftelse
+          </h1>
         </article>
         <article
           class="grid place-content-center pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop"
@@ -373,12 +371,12 @@
             </div>
             <div class="rounded-radius-mobile border-2 border-color-headings">
               <div class="flex lg:gap-10">
-                <div class="my-auto w-1/2 pt-xs-spacing-mobile lg:w-full">
+                <figure class="my-auto w-1/2 pt-xs-spacing-mobile lg:w-full">
                   <img
                     src="img/abonnement_filler.webp"
                     alt="blomster i en spand"
                   />
-                </div>
+                </figure>
                 <div class="lg:w-[600px]">
                   <div class="pt-l-spacing-mobile lg:pt-l-spacing-desktop">
                     <p
@@ -413,11 +411,11 @@
               <div
                 class="flex place-content-center py-l-spacing-mobile font-medium lg:py-m-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   Subtotal 620 kr
-                </h4>
+                </h3>
               </div>
             </div>
           </article>
@@ -435,11 +433,11 @@
               <div
                 class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:pt-l-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   Navn
-                </h4>
+                </h3>
                 <p
                   class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -449,11 +447,11 @@
               <div
                 class="flex justify-between px-s-spacing-mobile pb-m-spacing-mobile lg:px-s-spacing-desktop lg:py-xl-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   Levering
-                </h4>
+                </h3>
                 <p
                   class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -465,11 +463,11 @@
               <div
                 class="flex justify-between px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   E-mail
-                </h4>
+                </h3>
                 <p
                   class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -479,11 +477,11 @@
               <div
                 class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4
+                <h3
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
                 >
                   Telefonnummer
-                </h4>
+                </h3>
                 <p
                   class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -494,9 +492,11 @@
               <div
                 class="flex place-content-center pb-l-spacing-mobile font-medium lg:py-m-spacing-desktop"
               >
-                <p class="font-font-body text-body-mobile lg:text-body-desktop">
+                <h4
+                  class="font-font-body text-body-mobile lg:text-body-desktop"
+                >
                   Jeg ønsker en SMS, pr levering
-                </p>
+                </h4>
               </div>
             </div>
           </article>
@@ -529,17 +529,20 @@
           </article>
         </section>
         <section>
-          <article class="">
-            <div class="primary py-xl-spacing-mobile lg:py-xl-spacing-desktop">
-              <p
+          <article>
+            <div class="py-xl-spacing-mobile lg:py-xl-spacing-desktop">
+              <h3
                 class="text-center font-font-body text-body-mobile lg:text-body-desktop"
               >
                 En bekræftelse vil blive sendt til dig på din mail
-              </p>
+              </h3>
               <div class="pt-xl-spacing-mobile">
-                <button class="mx-auto">
-                  <a href="tak.html">Bekræft</a>
-                </button>
+                <a
+                  tabindex="0"
+                  class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+                  href="tak.html"
+                  >Bekræft</a
+                >
               </div>
             </div>
           </article>
