--- a/src/information.html
+++ b/src/information.html
@@ -461,7 +461,7 @@
           <div
             class="flex justify-between pt-xl-spacing-mobile lg:justify-evenly lg:pt-xl-spacing-desktop"
           >
-            <div class="secondary">
+            <div>
               <a
                 class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
                 href="kurv.html"
@@ -469,7 +469,7 @@
                 Tilbage
               </a>
             </div>
-            <div class="primary">
+            <div>
               <a
                 tabindex="0"
                 class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
