--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -73,34 +73,7 @@
         border: solid 2px var(--color-kurv-bar-active);
       }
 
-      .primary button {
-        background-color: var(--color-primary-button-background);
-        color: var(--color-primary-button-text);
-        font-family: var(--button-text);
-        font-weight: var(--font-weight-semibold);
-        font-size: var(--button-mobile);
-        padding: 15px 40px;
-        border: none;
-        box-shadow: var(--shadow);
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        border-radius: var(--radius-mobile);
-        max-width: 50%;
-        height: 50px;
-        gap: 10px;
-      }
-      .primary button:hover {
-        background-color: var(--color-primary-button-hover-background);
-      }
-
       @media (min-width: 900px) {
-        .primary button {
-          font-size: var(--button-desktop);
-          padding: 15px 60px;
-          border-radius: var(--radius-desktop);
-        }
         .overskrift {
           font-size: var(--h4-desktop);
         }
@@ -138,197 +111,196 @@
       }
     </style>
   </head>
-  <!-- header -->
-  <header>
-    <div
-      class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
-    >
-      <p tabindex="0">Køb dine blomster i vores butikker</p>
-      <p tabindex="0">Bestil dit abonnement på vores webshop</p>
-    </div>
-    <!-- LOGO DESKTOP -->
-    <section tabindex="0">
-      <a class="navigation_desktop" href="index.html">
-        <img
-          class="logo_lang"
-          id="sort"
-          src="img/logo/bb_logo_lang.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_lang"
-          id="sol"
-          src="img/logo/bb_logo_lang_sol.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_lang"
-          id="graes"
-          src="img/logo/bb_logo_lang.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_lang"
-          id="himmel"
-          src="img/logo/bb_logo_lang_himmel.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_lang"
-          id="rust"
-          src="img/logo/bb_logo_lang_rust.png"
-          alt="Blomster Bjarne logo"
-        />
-      </a>
-    </section>
-
-    <!-- NAVIGATION MOBIL -->
-    <section tabindex="0" class="navigation_mobil">
-      <a class="logo_mobil" href="index.html">
-        <img
-          class="logo_kort"
-          id="sort"
-          src="img/logo/bb_logo_kort.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_kort"
-          id="sol"
-          src="img/logo/bb_logo_kort_sol.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_kort"
-          id="graes"
-          src="img/logo/bb_logo_kort_graes.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_kort"
-          id="himmel"
-          src="img/logo/bb_logo_kort_himmel.png"
-          alt="Blomster Bjarne logo"
-        />
-        <img
-          class="logo_kort"
-          id="rust"
-          src="img/logo/bb_logo_kort_rust.png"
-          alt="Blomster Bjarne logo"
-        />
-      </a>
-
-      <div class="burger">
-        <button class="toggle-btn">☰</button>
-      </div>
-    </section>
-
-    <nav class="lg:flex">
-      <ul>
-        <li>
-          <a
-            tabindex="0"
-            href="abonnement.html"
-            class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
-            >Abonnement</a
-          >
-        </li>
-        <div class="dropdown">
-          <label>
-            <button class="flex">
-              <p
-                tabindex="0"
-                class="font-other-headings text-h3-mobile lg:text-h5-desktop"
-              >
-                Sortiment
-              </p>
-              <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
-                <path
-                  fill="#000000"
-                  d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"
-                />
-              </svg>
-            </button>
-          </label>
-          <ul class="underkat m-0">
-            <li>
-              <a
-                tabindex="0"
-                class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
-                href="blomster.html"
-                >Blomster</a
-              >
-            </li>
-            <li>
-              <a
-                tabindex="0"
-                class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
-                href="vaser.html"
-                >Vaser</a
-              >
-            </li>
-          </ul>
-        </div>
-        <li>
-          <a
-            tabindex="0"
-            href="#"
-            class="font-other-headings text-h3-mobile lg:text-h5-desktop"
-            >Begivenheder</a
-          >
-        </li>
-        <li>
-          <a
-            tabindex="0"
-            href="#"
-            class="font-other-headings text-h3-mobile lg:text-h5-desktop"
-            >Kontakt os</a
-          >
-        </li>
-      </ul>
-
-      <ul class="secondary_nav">
-        <li>
-          <a tabindex="0" href="logind.html">
-            <img
-              class="person h-8 w-8"
-              src="img/ikoner/person.svg"
-              alt="Gå til din konto"
-            />
-          </a>
-        </li>
-        <li>
-          <a tabindex="0" href="kurv.html">
-            <img
-              class="shopping h-8 w-8"
-              src="img/ikoner/shopping_bag.svg"
-              alt="Gå til kurv"
-            />
-          </a>
-        </li>
-        <li>
-          <img
-            tabindex="0"
-            class="search h-8 w-8"
-            src="img/ikoner/search.svg"
-            alt="Søg"
-          />
-        </li>
-      </ul>
-    </nav>
-  </header>
   <body>
+    <!-- header -->
+    <header>
+      <div
+        class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
+      >
+        <p tabindex="0">Køb dine blomster i vores butikker</p>
+        <p tabindex="0">Bestil dit abonnement på vores webshop</p>
+      </div>
+      <!-- LOGO DESKTOP -->
+      <section tabindex="0">
+        <a class="navigation_desktop" href="index.html">
+          <img
+            class="logo_lang"
+            id="sort"
+            src="img/logo/bb_logo_lang.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="sol"
+            src="img/logo/bb_logo_lang_sol.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="graes"
+            src="img/logo/bb_logo_lang.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="himmel"
+            src="img/logo/bb_logo_lang_himmel.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_lang"
+            id="rust"
+            src="img/logo/bb_logo_lang_rust.png"
+            alt="Blomster Bjarne logo"
+          />
+        </a>
+      </section>
+
+      <!-- NAVIGATION MOBIL -->
+      <section tabindex="0" class="navigation_mobil">
+        <a class="logo_mobil" href="index.html">
+          <img
+            class="logo_kort"
+            id="sort"
+            src="img/logo/bb_logo_kort.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="sol"
+            src="img/logo/bb_logo_kort_sol.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="graes"
+            src="img/logo/bb_logo_kort_graes.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="himmel"
+            src="img/logo/bb_logo_kort_himmel.png"
+            alt="Blomster Bjarne logo"
+          />
+          <img
+            class="logo_kort"
+            id="rust"
+            src="img/logo/bb_logo_kort_rust.png"
+            alt="Blomster Bjarne logo"
+          />
+        </a>
+
+        <div class="burger">
+          <button class="toggle-btn">☰</button>
+        </div>
+      </section>
+
+      <nav class="lg:flex">
+        <ul>
+          <li>
+            <a
+              tabindex="0"
+              href="abonnement.html"
+              class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Abonnement</a
+            >
+          </li>
+          <div class="dropdown">
+            <label>
+              <button class="flex">
+                <p
+                  tabindex="0"
+                  class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+                >
+                  Sortiment
+                </p>
+                <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
+                  <path
+                    fill="#000000"
+                    d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0z"
+                  />
+                </svg>
+              </button>
+            </label>
+            <ul class="underkat m-0">
+              <li>
+                <a
+                  tabindex="0"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  href="blomster.html"
+                  >Blomster</a
+                >
+              </li>
+              <li>
+                <a
+                  tabindex="0"
+                  class="dropdown-content w-52 rounded-radius-mobile bg-color-white p-4 font-font-body text-body-mobile shadow lg:text-body-desktop"
+                  href="vaser.html"
+                  >Vaser</a
+                >
+              </li>
+            </ul>
+          </div>
+          <li>
+            <a
+              tabindex="0"
+              href="#"
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Begivenheder</a
+            >
+          </li>
+          <li>
+            <a
+              tabindex="0"
+              href="#"
+              class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >Kontakt os</a
+            >
+          </li>
+        </ul>
+
+        <ul class="secondary_nav">
+          <li>
+            <a tabindex="0" href="logind.html">
+              <img
+                class="person h-8 w-8"
+                src="img/ikoner/person.svg"
+                alt="Gå til din konto"
+              />
+            </a>
+          </li>
+          <li>
+            <a tabindex="0" href="kurv.html">
+              <img
+                class="shopping h-8 w-8"
+                src="img/ikoner/shopping_bag.svg"
+                alt="Gå til kurv"
+              />
+            </a>
+          </li>
+          <li>
+            <img
+              tabindex="0"
+              class="search h-8 w-8"
+              src="img/ikoner/search.svg"
+              alt="Søg"
+            />
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <main
       class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
     >
       <section>
         <article>
-          <div>
-            <h1
-              class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
-            >
-              Kreditkort
-            </h1>
-          </div>
+          <h1
+            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
+          >
+            Kreditkort
+          </h1>
         </article>
         <article
           class="grid place-content-center pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop"
@@ -390,11 +362,11 @@
           >
             <div class="">
               <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h4
+                <h2
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
                   Fulde navn kortholder <span class="text-rust-500">*</span>
-                </h4>
+                </h2>
                 <label for="betaling">
                   <input
                     class="w-full font-font-body text-body-mobile lg:text-body-desktop"
@@ -405,11 +377,11 @@
                 </label>
               </div>
               <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h4
+                <h2
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
                   Kortnummer <span class="text-rust-500">*</span>
-                </h4>
+                </h2>
                 <label for="betaling">
                   <input
                     class="w-full font-font-body text-body-mobile lg:text-body-desktop"
@@ -423,11 +395,11 @@
 
             <div class="flex gap-10 lg:flex-col lg:gap-0">
               <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h4
+                <h2
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
                   Udløbsdato <span class="text-rust-500">*</span>
-                </h4>
+                </h2>
                 <label for="betaling">
                   <input
                     class="w-full font-font-body text-body-mobile lg:text-body-desktop"
@@ -438,11 +410,11 @@
                 </label>
               </div>
               <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h4
+                <h2
                   class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
                 >
                   Kontrolcifre <span class="text-rust-500">*</span>
-                </h4>
+                </h2>
                 <label for="betaling">
                   <input
                     class="w-full font-font-body text-body-mobile lg:text-body-desktop"
@@ -456,14 +428,17 @@
           </form>
           <div class="flex gap-5 lg:place-content-center">
             <input class="h-8 w-8" type="checkbox" />
-            <p class="font-font-body text-body-mobile lg:text-body-desktop">
+            <h3 class="font-font-body text-body-mobile lg:text-body-desktop">
               Jeg har læst og accepterer vilkår og betingelser
-            </p>
+            </h3>
           </div>
-          <div class="primary py-xl-spacing-mobile lg:py-xl-spacing-desktop">
-            <button class="mx-auto">
-              <a href="betal_bekraeft.html">Betal</a>
-            </button>
+          <div class="py-xl-spacing-mobile lg:py-xl-spacing-desktop">
+            <a
+              tabindex="0"
+              class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/4 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+              href="betal_bekraeft.html"
+              >Betal</a
+            >
           </div>
         </article>
       </section>
