--- a/src/blomster.html
+++ b/src/blomster.html
@@ -112,7 +112,7 @@
       }
     </style>
   </head>
-  <body class="">
+  <body>
     <!-- header -->
     <header>
       <div
@@ -323,6 +323,7 @@
           width="32"
           height="32"
           viewBox="0 0 24 24"
+          alt="pil ned"
         >
           <path
             fill="currentColor"
@@ -370,11 +371,11 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Anthurium</h4>
+              <h3>Anthurium</h3>
             </div>
           </div>
           <div class="article_wrapper overskrift swap-on p-s-spacing-mobile">
-            <h4>Anthurium</h4>
+            <h3>Anthurium</h3>
             <div class="mx-auto grid">
               <div class="flex">
                 <img
@@ -382,7 +383,7 @@
                   src="img/ikoner/oprindelse_ikon.svg"
                   alt="flag ikon"
                 />
-                <p>hej</p>
+                <h4>hej</h4>
               </div>
               <div class="flex">
                 <img
@@ -390,7 +391,7 @@
                   src="img/ikoner/sollys_ikon.svg"
                   alt="sol ikon"
                 />
-                <p>hej</p>
+                <h4>hej</h4>
               </div>
               <div class="flex">
                 <img
@@ -398,7 +399,7 @@
                   src="img/ikoner/holdbarhed_ikon.svg"
                   alt="ur ikon"
                 />
-                <p>hej</p>
+                <h4>hej</h4>
               </div>
               <div class="flex">
                 <img
@@ -406,7 +407,7 @@
                   src="img/ikoner/maal_ikon.svg"
                   alt="målebånd ikon"
                 />
-                <p>hej</p>
+                <h4>hej</h4>
               </div>
               <div class="flex">
                 <img
@@ -414,7 +415,7 @@
                   src="img/ikoner/pris_ikon.svg"
                   alt="dollertegn ikon"
                 />
-                <p>hej</p>
+                <h4>hej</h4>
               </div>
             </div>
           </div>
@@ -433,7 +434,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Astromea</h4>
+              <h3>Astromea</h3>
             </div>
           </div>
         </article>
@@ -454,7 +455,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Carnations</h4>
+              <h3>Carnations</h3>
             </div>
           </div>
         </article>
@@ -475,7 +476,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Dry flower</h4>
+              <h3>Dry flower</h3>
             </div>
           </div>
         </article>
@@ -496,7 +497,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -517,7 +518,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -534,7 +535,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -552,7 +553,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -573,7 +574,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -594,7 +595,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -615,7 +616,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -632,7 +633,7 @@
             </div>
 
             <div class="overskrift p-s-spacing-mobile">
-              <h4>Alstromeria</h4>
+              <h3>Alstromeria</h3>
             </div>
           </div>
         </article>
@@ -642,14 +643,17 @@
       <section
         class="mx-auto w-10/12 pt-l-spacing-mobile pb-xl-spacing-mobile text-center font-font-body text-body-mobile lg:py-xxl-spacing-desktop"
       >
-        <p>Øv, du er nået til enden.</p>
+        <h5>Øv, du er nået til enden.</h5>
         <p class="pb-xl-spacing-mobile lg:pb-xl-spacing-desktop">
           Kan du ikke bestemme dig for én enkelt? Fri dig selv for besværet og
           bestil et abonnement i dag!
         </p>
         <div>
-          <a class="" href="abonnement1.html"
-            ><button class="mx-auto">Tegn mit abonnement</button></a
+          <a
+            tabindex="0"
+            class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            href="abonnement.html"
+            >Tegn mit Abonnement</a
           >
         </div>
       </section>
