--- a/src/blomster.html
+++ b/src/blomster.html
@@ -1414,6 +1414,7 @@
             </div>
           </div>
         </article>
+        <a href="blomst_test.html">test side</a>
       </section>
 
       <!---------------------------------------------- TREDJE SEKTION -->
